# basic-cli-roc-platform-builder

./: Cargo.toml  LICENSE  README.md  build.rs  flake.nix  justfile
examples/: main.roc
platform/: Cmd.roc  Dir.roc  Env.roc  File.roc  Http.roc  Path.roc  Random.roc  Sleep.roc  Stderr.roc  Stdin.roc  Stdout.roc  Tty.roc  Utc.roc  main.roc
src/: http.rs  lib.rs
