[package]
name = "basic-cli"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "host"
crate-type = ["staticlib"]

[dependencies]
roc-platform-builder.path = "../roc-platform-builder/crates/roc-platform-builder"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
roc_io_error.path = "../basic-cli/crates/roc_io_error"
roc_command.path = "../basic-cli/crates/roc_command"
roc_random.path = "../basic-cli/crates/roc_random"
crossterm = "0.29.0"
