[package]
name = "basic-cli"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "host"
crate-type = ["staticlib"]

[dependencies]
roc-platform-builder.git = "https://github.com/johanneshorner/roc-platform-builder"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
roc_io_error = { git = "https://github.com/roc-lang/basic-cli", rev = "a2e01910f5fac513dd04721dab3a895726643d6c" }
roc_command = { git = "https://github.com/roc-lang/basic-cli", rev = "a2e01910f5fac513dd04721dab3a895726643d6c" }
roc_random = { git = "https://github.com/roc-lang/basic-cli", rev = "a2e01910f5fac513dd04721dab3a895726643d6c" }
crossterm = "0.29.0"
reqwest = { version = "0.13.1", features = ["blocking"] }

[patch."https://github.com/roc-lang/roc"]
roc_std_new = { git = "https://github.com/roc-lang/roc?rev=c227c1cc3896fe09c55c82a19e6477113d53efe2" }
